--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,2 @@
-MyEBirdData.csv eBird-Clements-v2023-integrated-checklist-October-2023.csv
+MyEBirdData.csv
+eBird-Clements-v2023-integrated-checklist-October-2023.csv
